# fastapi-backend-course

./: pyproject.toml
.github/workflows/: ci.yml  main.yml
git/: config.py
git/src/: main.py
simple_backend/: orders.py
